--- a/WebSite/WebSite.csproj
+++ b/WebSite/WebSite.csproj
@@ -77,6 +77,7 @@
     <Content Include="Config\log4net.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Properties\PublishProfiles\HttpJobDemo.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
